--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,104 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.contact-form-container {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-}
-
-.contact-form-container h2 {
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.form-row {
-    display: flex;
-    justify-content: space-between;
-}
-
-.form-group {
-    margin-bottom: 15px;
-    flex: 1;
-}
-
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-.form-group input,
-.form-group select,
-.form-group textarea {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.form-group textarea {
-    height: 100px;
-    resize: none;
-}
-
-.form-row .form-group:first-child {
-    margin-right: 10px;
-}
-
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007BFF;
-    border: none;
-    color: white;
-    font-size: 16px;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
+#last{ 
+	width: 100%; 
+	height: auto; 
+	justify-content: center; 
+	background-color: #ffb3b3; 
+	} 
+	.full{ 
+	width: 80%; 
+	display: inline-block; 
+	margin:2%; 
+	margin-left: 10%; 
+	text-align: center; 
+	background-color: black; 
+	color: white; 
+	border:15px solid orange; 
+	border-radius: 5px; 
+	margin-bottom: 8%; 
+	margin-top: 8%; 
+	} 
+	.full h3{ 
+	font-size: 2rem; 
+	display:block; 
+	margin: 2%; 
+	margin-bottom: 0; 
+	} 
+	.lt{ 
+	padding: 2%; 
+	margin: 2%; 
+	} 
+	.rt{ 
+	padding: 2%; 
+	margin: 2%; 
+	} 
+	.lt textarea{ 
+	width: 94%; 
+	margin-left: 2.8%; 
+	} 
+	button{ 
+	margin: 2%; 
+	} 
+	.btn-primary{ 
+	background-color: black; 
+	border: 2px solid white; 
+	border-radius: 5%; 
+	} 
+	.list-item{ 
+	margin-bottom: 2%; 
+	list-style-type: none; 
+	} 
+	.list-item span{ 
+	margin-left: 10px; 
+	font-size: 1.4rem; 
+	} 
+	.list-item a{ 
+	color: white; 
+	display: inline-block; 
+	} 
+	.list-item a:hover{ 
+	text-decoration: underline; 
+	} 
+	.form-control{ 
+	background-color: black; 
+	} 
+		
+	@media screen and (min-width: 770px){ 
+	.full{ 
+		width: 70%; 
+		margin-left: 15%; 
+	} 
+	.lt textarea{ 
+	width: 95%; 
+	margin-left: 2.4%; 
+	} 
+	} 
+		
+	@media screen and (min-width: 1100px){ 
+	.full{ 
+		width: 65%; 
+		margin-left: 17%; 
+		margin-top: 5%; 
+	} 
+	.lt{ 
+		width: 55%; 
+		display: inline-block; 
+		float: left; 
+		margin-right: 0; 
+	} 
+	.rt{ 
+		width: 35%; 
+		display: inline-block; 
+		margin-left: 0; 
+	} 
+	.list-item{ 
+	margin-bottom: 10%; 
+	} 
+	.contact-list{ 
+		margin-top: 22%; 
+		padding-right: 8%; 
+	} 
+	.fa-envelope, .gmail{ 
+		display: inline-block; 
+		width: auto; 
+	} 
+	}
